# passive_walker_rl

./: .gitignore  README.md  passiveWalker_model.xml  pyproject.toml  run.txt
data/: ppo_scratch_training_log_notebook.pkl  trained_policy_with_critic_notebook.pkl
data/bc/hip_knee_alternatives/: hip_knee_alternatives_combined_100000steps.eqx  hip_knee_alternatives_combined_100000steps_history.pkl  hip_knee_alternatives_combined_20000steps.npz  hip_knee_alternatives_combined_20000steps_history.pkl  hip_knee_alternatives_combined_50000steps.eqx  hip_knee_alternatives_combined_50000steps_history.pkl  hip_knee_alternatives_demos_20000steps.pkl  hip_knee_alternatives_demos_50000steps.pkl  hip_knee_alternatives_huber_100000steps.eqx  hip_knee_alternatives_huber_100000steps_history.pkl  hip_knee_alternatives_huber_20000steps.npz  hip_knee_alternatives_huber_20000steps_history.pkl  hip_knee_alternatives_huber_50000steps.eqx  hip_knee_alternatives_l1_100000steps.eqx  (+10 more)
passive_walker/: __init__.py  constants.py
passive_walker/bc/: BehaviourClonning.ipynb  MUJOCO_LOG.TXT  README.md  __init__.py  plot_results.py  utils.py
passive_walker/brax/: Brax.ipynb  README.md  __init__.py  benchmarks.py  convert_xml.py  sweep_ppo.py  tiny_ppo_sanity.py  utils.py
passive_walker/envs/: __init__.py  brax_env.py  mujoco_env.py  mujoco_fsm_env.py
passive_walker/ppo/: PPO.ipynb  __init__.py  ppo_comparison_summary.csv
passive_walker/utils/: device.py  io.py  walker_plotter.py
passive_walker_rl.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
results/brax/: sweep_agg.csv
(+156 files in other folders)
