[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "passive_walker_rl"
version = "0.1.0"
description = "A JAX-native passive walker PPO pipeline (MuJoCo + Brax)."
readme = "README.md"
requires-python = ">=3.9,<3.11"
authors = [
  { name="Yunus Emre Danabaş", email="yunusdanabas@su.edu.tr" }
]
dependencies = [
  "jax",
  "equinox",
  "optax",
  "brax",
  "gym",
  "numpy",
  "scipy",
  "tqdm",
  "matplotlib",
]

[project.urls]
"Repository" = "https://github.com/YOUR_USERNAME/passive_walker_rl"

[tool.setuptools.packages.find]
include = ["passive_walker*"]
